logs/collective.atimage.transformmenu.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/atimage'...
Listing './lib/python3.5/site-packages/collective/atimage/transformmenu'...
Listing './lib/python3.5/site-packages/collective/atimage/transformmenu/Extensions'...
Listing './lib/python3.5/site-packages/collective/atimage/transformmenu/browser'...
Listing './lib/python3.5/site-packages/collective/atimage/transformmenu/browser/resources'...
Compiling './lib/python3.5/site-packages/collective/atimage/transformmenu/browser/transform.py'...
***   File "./lib/python3.5/site-packages/collective/atimage/transformmenu/browser/transform.py", line 18
    except Exception, msg:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/atimage/transformmenu/profiles'...
Listing './lib/python3.5/site-packages/collective/atimage/transformmenu/profiles/default'...
Listing './lib/python3.5/site-packages/collective/atimage/transformmenu/profiles/default/types'...
Listing './lib/python3.5/site-packages/collective/atimage/transformmenu/profiles/uninstall'...
Listing './lib/python3.5/site-packages/collective/atimage/transformmenu/profiles/uninstall/types'...
Listing './lib/python3.5/site-packages/collective/atimage/transformmenu/tests'...
Listing './lib/python3.5/site-packages/collective/atimage/transformmenu/tests/samples'...
Listing './lib/python3.5/site-packages/collective.atimage.transformmenu-1.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
